--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -74,9 +74,34 @@ footer {
 /* Responsive  Media queries */
 /* Mobile size  */
 @media only screen and (max-width: 390px) and (max-height: 844px) {
+  /* .container {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black; 
+}
+
+
+.strip {
+  position: absolute;
+  height: 100%; 
+  width: 20%; 
+  background-color: hsl(0, 0, 95%);
+  top: 0;
+}
+
+
+.light-strip:nth-child(odd) {
+  width: 10%; 
+}
+   */
   svg {
     height: 28px;
     width: 118px;
+    border: solid red 5px;
   }
 }
 /* Tablet size */
