--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -47,7 +47,7 @@
 }
 body {
   font-family: "Outfit", serif;
-  background: var(--Light-grayish-blue);
+  background: var(--white-002);
   /* color: var(--Very-Dark-Blue);  */
   display: flex;
   flex-direction: column;
@@ -98,12 +98,62 @@ footer {
   width: 10%; 
 }
    */
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 1em;
+    width: 100%;
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 375px;
+  }
   svg {
     height: 28px;
     width: 118px;
-    border: solid red 5px;
+    margin: 2em 0em;
+  }
+  h1 {
+    color: var(--slate-900);
+    font-size: var(--txt-size-40px);
+    line-height: 110%;
+  }
+  p {
+    color: var(--slate-600);
+    font-size: var(--txt-size-16px);
+    line-height: 150%;
+    margin-bottom: 2rem;
+  }
+  .section-00 {
+    height: 715px;
+  }
+  .hero {
+    width: 375px;
+    margin: 25px 0px;
+    display: block;
+  }
+  .btn-00 {
+    width: 193px;
+    height: 56px;
+    border-radius: 3rem;
+    border-style: none;
+    background: var(--cyan-600);
+    color: var(--White);
+    font-size: var(--txt-size-16px);
+    line-height: 150%;
+    font-weight: var(--fw-600);
+  }
+  section button span {
+    color: var(--cyan-300);
   }
 }
+
 /* Tablet size */
 /* @media only screen and (max-width: 768px) and (max-height: 1024px) { 
   
