--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -74,8 +74,10 @@ footer {
 /* Responsive  Media queries */
 /* Mobile size  */
 @media only screen and (max-width: 390px) and (max-height: 844px) {
-  /* Background Stripes */
+ 
+  
 
+   
   main {
     display: flex;
     flex-direction: column;
@@ -95,19 +97,21 @@ footer {
   svg {
     height: 28px;
     width: 118px;
-    margin: 0.5em;
+    margin: .5em;
   }
-  h1 {
+  h1, h2 {
     color: var(--slate-900);
     font-size: var(--txt-size-40px);
     line-height: 110%;
   }
+
   p {
     color: var(--slate-600);
     font-size: var(--txt-size-16px);
     line-height: 150%;
     /* margin-bottom: 2rem; */
   }
+
 
   .section-00 {
     height: 715px;
@@ -132,6 +136,7 @@ footer {
   }
   section button span {
     color: var(--cyan-300);
+    
   }
   .btn-2 {
     width: 161px;
@@ -146,46 +151,56 @@ footer {
     margin-bottom: 5rem;
   }
   .section-01 {
-    height: 915px;
+    height:915px;
     width: 375px;
     position: relative;
-    padding: 2rem 1rem;
+    padding: 2rem 1rem; 
     padding-bottom: 4rem;
+    margin-bottom: 5rem;
   }
-
-  .verticalLine,
-  .verticalLine-2 {
-    border-left: solid 2px var(--slate-300);
+  .verticalLine, .verticalLine-2 {
+    border-left: solid 1px var(--slate-300);
     height: 80px;
     position: absolute;
-    top: -50px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 2;
   }
-  .circle,
-  .circle-2 {
-    height: 56px;
-    width: 56px;
-    border: solid 2px var(--slate-300);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 30px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: var(--White);
-    z-index: 1;
+  .verticalLine {
+    top: -3rem;
+    z-index: 2; 
   }
-  .circle span,
-  .circle-2 span {
+  .verticalLine-2 {
+  top: -7rem;
+  z-index: 1;
+}
+.circle, .circle-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  border: solid 1px var(--slate-300);
+  border-radius: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  /* margin: 20px auto; */
+   background: var(--White);
+}
+
+.circle {
+  top: 2rem;
+  z-index: 1; 
+}
+.circle-2 {
+  top: -2rem;
+  z-index: 11; 
+}
+  .circle span, .circle-2 span {
     font-size: 1rem;
     font-weight: var(--fw-600);
-    /* position: relative;
-    z-index: 1;  */
   }
+
 
   .image-grid {
     display: grid;
@@ -198,39 +213,63 @@ footer {
     position: relative;
     margin-bottom: 5rem;
   }
-  /* .image-grid .box {
-    width: 147.5px; 
-    height: 144px; 
-    border-radius: 5px;
-    overflow: hidden; 
-    position: relative;
-  } */
-  .box.a,
-  .box.b,
-  .box.c,
-  .box.d {
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    border-radius: 5px;
+
+.box.a, .box.b, .box.c, .box.d {
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  border-radius: 5px;
+}
+.a{
+    background: url(./assets/desktop/image-woman-in-videocall.jpg) no-repeat center center;
   }
-  .a {
-    background: url(./assets/desktop/image-woman-in-videocall.jpg) no-repeat
-      center center;
+.b{
+    background: url(./assets/desktop/image-women-videochatting.jpg) no-repeat center center;
   }
-  .b {
-    background: url(./assets/desktop/image-women-videochatting.jpg) no-repeat
-      center center;
-  }
-  .c {
-    background: url(./assets/desktop/image-men-in-meeting.jpg) no-repeat center
-      center;
+.c{
+    background: url(./assets/desktop/image-men-in-meeting.jpg) no-repeat center center;
   }
   .d {
-    background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
-      center;
+    background: url(./assets/desktop/image-man-texting.jpg) no-repeat center center;
   }
+
+  .section-02 {
+    height: 374px; 
+    width: 375px; 
+    position: relative; 
+    overflow: visible; 
+  }
+  .section-02 .background-overlay {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(./assets/mobile/image-footer.jpg) no-repeat center center;
+    background-size: cover; 
+    z-index: 1; 
+  }
+  .section-02 .background-overlay::before {
+    content: ''; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--purple-300); 
+    opacity: .4; 
+    z-index: 2; 
+  }
+
+  .section-02 .content {
+    position: relative;
+    z-index: 3; 
+    text-align: center; 
+    color: var(--White); 
+    padding: 1em; 
+
+
 }
 
 /* Tablet size */
