--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -79,8 +79,13 @@ footer {
 }
 
 /* Responsive  Media queries */
+/* Desktop size */
+/* @media only screen and (max-width: 1440px) and (max-height: 900px) { 
+  
+} */
+
 /* Tablet size */
-@media only screen and (max-width: 768px) and (max-height: 1024px) {
+@media only screen and /*(max-width: 768px) */(min-width: 391px) and /*(max-height: 1024px) */ (max-width: 798px) {
   main {
     display: flex;
     flex-direction: column;
@@ -103,10 +108,8 @@ footer {
     width: 118px;
     margin: 2em;
     padding: 0;
-    /* z-index: 10; */
     position: relative;
     visibility: visible;
-    /* background-color: transparent; */
   }
   h1,
   h2 {
@@ -116,93 +119,95 @@ footer {
     text-align: center;
     letter-spacing: -1px;
     word-spacing: 5px;
+    height: 106px;
+    width: 448.3px;
   }
-
+  p {
+    color: var(--slate-600);
+    font-size: var(--txt-size-16px);
+    line-height: 150%;
+    letter-spacing: 1px;
+  }
+  section.section-00 p {
+    width: 448.3px;
+    height: 48px;
+  }
   section.section-02 div.content h2,
   section.section-02 div.content p {
     color: var(--White);
   }
-  p {
-    color: var(--slate-600);
-    font-size: var(--txt-size-12px);
-    line-height: 110%;
-    letter-spacing: 1px;
-    /* font-weight: var(--fw-500); */
-    /* margin-bottom: 2rem; */
-  }
+
   section.section-02 div.content p {
     margin: 2rem 0rem;
   }
   .section-00 {
     max-width: 768px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
     margin: 0 auto;
-    /* height: 715px; */
-    position: relative;
-    overflow: visible;
-    z-index: 0;
-    margin-bottom: 3rem;
+    margin-bottom: 10rem;
   }
   .hero {
     max-width: 768px;
     width: 100%;
     margin: 0 auto;
   }
-  .btn {
-    background: var(--cyan-600);
+  .btn-container {
+    display: flex;
+    gap: 1rem;
   }
+  .btn,
   .btn-2 {
-    width: 161px;
-    margin-bottom: 5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 100%; */
+    margin-bottom: 0;
+    /* padding: 0.8rem 2rem;  */
+    /* font-size: 16px; */
   }
-  .btn,
-  .btn-3 {
-    width: 193px;
-    margin-bottom: 2rem;
-  }
-  .btn-2,
-  .btn-3 {
-    background: var(--purple-600);
-  }
-  .btn,
-  .btn-2,
-  .btn-3 {
-    height: 56px;
-    border-radius: 3rem;
+
+  .btn {
+    margin-right: 1rem;
+    background: var(--cyan-600);
     color: var(--White);
+    height: 56px;
+    width: 193px;
+    border-radius: 3rem;
     border-style: none;
     font-size: var(--txt-size-16px);
     line-height: 150%;
     font-weight: var(--fw-600);
+    margin-bottom: 2rem;
   }
-  section button span {
-    color: var(--cyan-300);
+
+  .btn-2 {
+    background: var(--purple-600);
+    color: var(--White);
+    height: 56px;
+    width: 161px;
+    border-radius: 3rem;
+    border-style: none;
+    font-size: var(--txt-size-16px);
+    line-height: 150%;
+    font-weight: var(--fw-600);
+    margin-bottom: 2rem;
   }
-  .section-01 {
-    height: 915px;
-    width: 375px;
-    position: relative;
-    padding: 1rem;
-    padding-bottom: 2rem;
-    margin-bottom: 6rem;
-  }
-  .verticalLine,
-  .verticalLine-2 {
+
+  /* Line & Circle */
+  .verticalLine {
     border-left: solid 1px var(--slate-300);
     height: 80px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-  }
-  .verticalLine {
     top: -3rem;
     z-index: 2;
   }
-  .verticalLine-2 {
-    top: -7rem;
-    z-index: 1;
-  }
-  .circle,
-  .circle-2 {
+
+  .circle {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -215,94 +220,16 @@ footer {
     transform: translateX(-50%);
     /* margin: 20px auto; */
     background: var(--White);
-  }
-  .circle {
-    top: 2rem;
+    top: 55rem;
     z-index: 1;
   }
-  .circle-2 {
-    top: -2rem;
-    z-index: 11;
-  }
-  .circle span,
-  .circle-2 span {
+  .circle span {
     font-size: 1rem;
     font-weight: var(--fw-600);
   }
-  .image-grid {
-    display: grid;
-    grid-template-columns: 147.5px 147.5px;
-    grid-template-rows: 144px 144px;
-    grid-gap: 10px;
-    justify-content: center;
-    margin-top: 10rem;
-    z-index: 0;
-    position: relative;
-    margin-bottom: 5rem;
-  }
-  .box.a,
-  .box.b,
-  .box.c,
-  .box.d {
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    border-radius: 5px;
-  }
-  .a {
-    background: url(./assets/desktop/image-woman-in-videocall.jpg) no-repeat
-      center center;
-  }
-  .b {
-    background: url(./assets/desktop/image-women-videochatting.jpg) no-repeat
-      center center;
-  }
-  .c {
-    background: url(./assets/desktop/image-men-in-meeting.jpg) no-repeat center
-      center;
-  }
-  .d {
-    background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
-      center;
-  }
-  .section-02 {
-    height: 374px;
-    width: 375px;
-    position: relative;
-    overflow: visible;
-  }
-  .section-02 .background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(./assets/mobile/image-footer.jpg) no-repeat center center;
-    background-size: cover;
-    z-index: 1;
-  }
-  .section-02 .background-overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--purple-300);
-    opacity: 0.4;
-    z-index: 2;
-  }
-  .section-02 .content {
-    position: relative;
-    z-index: 3;
-    text-align: center;
-    color: var(--White);
-    padding: 1em;
-  }
 }
 /* Mobile size  */
-@media only screen and (max-width: 390px) and (max-height: 844px) {
+@media only screen and (max-width: 390px) /*and (max-height: 844px) */ {
   main {
     display: flex;
     flex-direction: column;
@@ -339,8 +266,6 @@ footer {
     font-size: var(--txt-size-12px);
     line-height: 110%;
     letter-spacing: 1px;
-    /* font-weight: var(--fw-500); */
-    /* margin-bottom: 2rem; */
   }
   section.section-02 div.content p {
     margin: 2rem 0rem;
@@ -353,6 +278,9 @@ footer {
     width: 375px;
     margin: 25px 0px;
     display: block;
+  }
+  .btn-container {
+    display: contents;
   }
   .btn {
     background: var(--cyan-600);
@@ -508,8 +436,3 @@ footer {
     padding: 1em;
   }
 }
-
-/* Desktop size */
-/* @media only screen and (max-width: 1440px) and (max-height: 900px) { 
-  
-} */
