--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap");
 :root {
   --white-50-opacity: rgba(255, 255, 255, 0.5);
@@ -198,16 +197,24 @@ footer {
   }
 
   /* Line & Circle */
-  .verticalLine {
+  .verticalLine,
+  .verticalLine-2 {
     border-left: solid 1px var(--slate-300);
     height: 80px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+  }
+  .verticalLine {
     top: 55rem;
     z-index: 2;
   }
-  .circle {
+  .verticalLine-2 {
+    top: -1rem;
+    z-index: 1;
+  }
+  .circle,
+  .circle-2 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -219,10 +226,17 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     background: var(--White);
+  }
+  .circle {
     top: 60rem;
     z-index: 1;
   }
-  .circle span {
+  .circle-2 {
+    top: -2rem;
+    z-index: 11;
+  }
+  .circle span,
+  .circle-2 span {
     font-size: 1rem;
     font-weight: var(--fw-600);
   }
@@ -262,6 +276,40 @@ footer {
   .d {
     background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
       center;
+  }
+  .section-02 {
+    height: 374px;
+    width: 375px;
+    position: relative;
+    overflow: visible;
+  }
+  .section-02 .background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(./assets/tablet/image-footer.jpg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+  }
+  .section-02 .background-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--purple-300);
+    opacity: 0.4;
+    z-index: 2;
+  }
+  .section-02 .content {
+    position: relative;
+    z-index: 3;
+    text-align: center;
+    color: var(--White);
+    padding: 1em;
   }
 }
 /* Mobile size  */
