--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -79,8 +79,8 @@ footer {
 
 /* Responsive  Media queries */
 /* Desktop size */
-/* @media only screen and (max-width: 1440px) and (max-height: 900px) { 
-  
+/* @media only screen and /*(max-width: 1440px) and /*(max-height: 900px)*/ /*{ 
+  Use (min-width: 799px) and (max-width: 900)
 } */
 
 /* Tablet size */
@@ -110,8 +110,16 @@ footer {
     position: relative;
     visibility: visible;
   }
+  /* Section P's & H2's */
+  section.section-02 h2 {
+    font-size: var(--txt-size-48px);
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: -1px;
+    word-spacing: 5px;
+  }
   h1,
-  h2 {
+  section.section-01 h2 {
     color: var(--slate-900);
     font-size: var(--txt-size-48px);
     line-height: 1.2;
@@ -121,30 +129,33 @@ footer {
     height: 106px;
     width: 448.3px;
   }
-  p {
+  section.section-00 p {
+    width: 448.3px;
+    height: 48px;
+  }
+  section.section-01 p {
+    height: 72px;
+    width: 504px;
+  }
+  section.section-02 div.content p {
+    height: 48px;
+    width: 504px;
+  }
+  section.section-00 p,
+  section.section-01 p {
     color: var(--slate-600);
     font-size: var(--txt-size-16px);
     line-height: 150%;
     letter-spacing: 1px;
   }
-  section.section-00 p {
-    width: 448.3px;
-    height: 48px;
-  }
-
-  section.section-01 p {
-    height: 72px;
-    width: 504px;
-  }
   section.section-02 div.content h2,
   section.section-02 div.content p {
     color: var(--White);
-  }
-
-  section.section-02 div.content p {
     margin: 2rem 0rem;
   }
-  .section-00 {
+  /* Section spacing*/
+  .section-00,
+  .section-01 {
     gap: 1rem;
     margin-bottom: 10rem;
   }
@@ -159,41 +170,32 @@ footer {
     display: flex;
     gap: 1rem;
   }
-  .btn,
-  .btn-2 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    /* width: 100%; */
-    margin-bottom: 0;
-    /* padding: 0.8rem 2rem;  */
-    /* font-size: 16px; */
-  }
   .btn {
     margin-right: 1rem;
-    background: var(--cyan-600);
-    color: var(--White);
-    height: 56px;
-    width: 193px;
-    border-radius: 3rem;
-    border-style: none;
-    font-size: var(--txt-size-16px);
-    line-height: 150%;
-    font-weight: var(--fw-600);
-    margin-bottom: 2rem;
   }
-
   .btn-2 {
     background: var(--purple-600);
-    color: var(--White);
-    height: 56px;
     width: 161px;
+  }
+  .btn,
+  .btn-2 {
+    margin-bottom: 2rem;
+  }
+  .btn,
+  .btn-3 {
+    background: var(--cyan-600);
+    width: 193px;
+  }
+  .btn,
+  .btn-2,
+  .btn-3 {
+    height: 56px;
+    color: var(--White);
     border-radius: 3rem;
     border-style: none;
     font-size: var(--txt-size-16px);
     line-height: 150%;
     font-weight: var(--fw-600);
-    margin-bottom: 2rem;
   }
 
   /* Line & Circle */
@@ -210,7 +212,7 @@ footer {
     z-index: 2;
   }
   .verticalLine-2 {
-    top: -1rem;
+    top: -7rem;
     z-index: 1;
   }
   .circle,
@@ -240,6 +242,8 @@ footer {
     font-size: 1rem;
     font-weight: var(--fw-600);
   }
+
+  /* Image grid */
   .image-grid {
     display: grid;
     grid-template-columns: repeat(4, 152px);
@@ -277,11 +281,13 @@ footer {
     background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
       center;
   }
+  /* section-02 */
   .section-02 {
-    height: 374px;
-    width: 375px;
+    height: 428px;
+
     position: relative;
     overflow: visible;
+    background: url(./assets/tablet/image-footer.jpg) no-repeat center center;
   }
   .section-02 .background-overlay {
     position: absolute;
@@ -289,7 +295,6 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(./assets/tablet/image-footer.jpg) no-repeat center center;
     background-size: cover;
     z-index: 1;
   }
@@ -305,30 +310,34 @@ footer {
     z-index: 2;
   }
   .section-02 .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     z-index: 3;
     text-align: center;
     color: var(--White);
     padding: 1em;
+    padding-top: 3rem;
   }
 }
 /* Mobile size  */
 @media only screen and (max-width: 390px) /*and (max-height: 844px) */ {
   main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     min-height: 100vh;
     padding: 1em;
     width: 100%;
   }
   section {
+    text-align: center;
+    width: 375px;
+  }
+  section,
+  main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    width: 375px;
   }
   svg {
     height: 28px;
@@ -366,9 +375,6 @@ footer {
   .btn-container {
     display: contents;
   }
-  .btn {
-    background: var(--cyan-600);
-  }
   .btn-2 {
     width: 161px;
     margin-bottom: 5rem;
@@ -377,9 +383,9 @@ footer {
   .btn-3 {
     width: 193px;
     margin-bottom: 2rem;
+    background: var(--cyan-600);
   }
-  .btn-2,
-  .btn-3 {
+  .btn-2 {
     background: var(--purple-600);
   }
   .btn,
