--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -79,12 +79,36 @@ footer {
 
 /* Responsive  Media queries */
 /* Desktop size */
-/* @media only screen and /*(max-width: 1440px) and /*(max-height: 900px)*/ /*{ 
-  Use (min-width: 799px) and (max-width: 900)
-} */
+@media only screen and (min-width: 769px) and (max-width: 900) {
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 1em;
+    width: 100%;
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 768px;
+  }
+  svg {
+    display: inline-block;
+    height: 28px;
+    width: 118px;
+    margin: 2em;
+    padding: 0;
+    position: relative;
+    visibility: visible;
+  }
+}
 
 /* Tablet size */
-@media only screen and /*(max-width: 768px) */(min-width: 391px) and /*(max-height: 1024px) */ (max-width: 798px) {
+@media only screen and (min-width: 391px) and (max-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
@@ -153,18 +177,55 @@ footer {
     color: var(--White);
     margin: 2rem 0rem;
   }
-  /* Section spacing*/
+  /* Sections*/
   .section-00,
   .section-01 {
     gap: 1rem;
     margin-bottom: 10rem;
+  }
+  .section-02 {
+    height: 428px;
+    width: 768px;
+    position: relative;
+    overflow: visible;
+    background: url(./assets/tablet/image-footer.jpg) no-repeat center center;
+  }
+  .section-02 .background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: 1;
+  }
+  .section-02 .background-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--purple-300);
+    opacity: 0.4;
+    z-index: 2;
+  }
+  .section-02 .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    z-index: 3;
+    text-align: center;
+    color: var(--White);
+    padding: 1em;
+    padding-top: 3rem;
   }
   .hero {
     max-width: 768px;
     width: 100%;
     margin: 0 auto;
   }
-
   /* Buttons */
   .btn-container {
     display: flex;
@@ -196,6 +257,45 @@ footer {
     font-size: var(--txt-size-16px);
     line-height: 150%;
     font-weight: var(--fw-600);
+  }
+
+  /* Image grid */
+  .image-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 152px);
+    grid-template-rows: 160px;
+    grid-gap: 20px;
+    justify-content: center;
+    margin-top: 7rem;
+    z-index: 0;
+    position: relative;
+    margin-bottom: 5rem;
+  }
+  .box.a,
+  .box.b,
+  .box.c,
+  .box.d {
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    border-radius: 5px;
+  }
+  .a {
+    background: url(./assets/desktop/image-woman-in-videocall.jpg) no-repeat
+      center center;
+  }
+  .b {
+    background: url(./assets/desktop/image-women-videochatting.jpg) no-repeat
+      center center;
+  }
+  .c {
+    background: url(./assets/desktop/image-men-in-meeting.jpg) no-repeat center
+      center;
+  }
+  .d {
+    background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
+      center;
   }
 
   /* Line & Circle */
@@ -242,87 +342,9 @@ footer {
     font-size: 1rem;
     font-weight: var(--fw-600);
   }
-
-  /* Image grid */
-  .image-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 152px);
-    grid-template-rows: 160px;
-    grid-gap: 20px;
-    justify-content: center;
-    margin-top: 7rem;
-    z-index: 0;
-    position: relative;
-    margin-bottom: 5rem;
-  }
-  .box.a,
-  .box.b,
-  .box.c,
-  .box.d {
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    border-radius: 5px;
-  }
-  .a {
-    background: url(./assets/desktop/image-woman-in-videocall.jpg) no-repeat
-      center center;
-  }
-  .b {
-    background: url(./assets/desktop/image-women-videochatting.jpg) no-repeat
-      center center;
-  }
-  .c {
-    background: url(./assets/desktop/image-men-in-meeting.jpg) no-repeat center
-      center;
-  }
-  .d {
-    background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
-      center;
-  }
-  /* section-02 */
-  .section-02 {
-    height: 428px;
-
-    position: relative;
-    overflow: visible;
-    background: url(./assets/tablet/image-footer.jpg) no-repeat center center;
-  }
-  .section-02 .background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    z-index: 1;
-  }
-  .section-02 .background-overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--purple-300);
-    opacity: 0.4;
-    z-index: 2;
-  }
-  .section-02 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    z-index: 3;
-    text-align: center;
-    color: var(--White);
-    padding: 1em;
-    padding-top: 3rem;
-  }
 }
 /* Mobile size  */
-@media only screen and (max-width: 390px) /*and (max-height: 844px) */ {
+@media only screen and (max-width: 390px) {
   main {
     justify-content: center;
     min-height: 100vh;
@@ -363,15 +385,62 @@ footer {
   section.section-02 div.content p {
     margin: 2rem 0rem;
   }
+  section button span {
+    color: var(--cyan-300);
+  }
   .section-00 {
     height: 715px;
     margin-bottom: 3rem;
+  }
+  .section-01 {
+    height: 915px;
+    width: 375px;
+    position: relative;
+    padding: 1rem;
+    padding-bottom: 2rem;
+    margin-bottom: 6rem;
+  }
+  /* section-02 */
+  .section-02 {
+    height: 374px;
+    width: 375px;
+    overflow: visible;
+  }
+  .section-02 .content {
+    z-index: 3;
+    text-align: center;
+    color: var(--White);
+    padding: 1em;
+  }
+  .section-02,
+  .section-02 .content {
+    position: relative;
+  }
+  .section-02 .background-overlay {
+    background: url(./assets/mobile/image-footer.jpg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+  }
+  .section-02 .background-overlay::before {
+    content: "";
+    background-color: var(--purple-300);
+    opacity: 0.4;
+    z-index: 2;
+  }
+  .section-02 .background-overlay,
+  .section-02 .background-overlay::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
   .hero {
     width: 375px;
     margin: 25px 0px;
     display: block;
   }
+  /* buttons */
   .btn-container {
     display: contents;
   }
@@ -399,61 +468,7 @@ footer {
     line-height: 150%;
     font-weight: var(--fw-600);
   }
-  section button span {
-    color: var(--cyan-300);
-  }
-  .section-01 {
-    height: 915px;
-    width: 375px;
-    position: relative;
-    padding: 1rem;
-    padding-bottom: 2rem;
-    margin-bottom: 6rem;
-  }
-  .verticalLine,
-  .verticalLine-2 {
-    border-left: solid 1px var(--slate-300);
-    height: 80px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .verticalLine {
-    top: -3rem;
-    z-index: 2;
-  }
-  .verticalLine-2 {
-    top: -7rem;
-    z-index: 1;
-  }
-  .circle,
-  .circle-2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 56px;
-    height: 56px;
-    border: solid 1px var(--slate-300);
-    border-radius: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-    /* margin: 20px auto; */
-    background: var(--White);
-  }
-  .circle {
-    top: 2rem;
-    z-index: 1;
-  }
-  .circle-2 {
-    top: -2rem;
-    z-index: 11;
-  }
-  .circle span,
-  .circle-2 span {
-    font-size: 1rem;
-    font-weight: var(--fw-600);
-  }
+  /* Image Grid */
   .image-grid {
     display: grid;
     grid-template-columns: 147.5px 147.5px;
@@ -491,38 +506,51 @@ footer {
     background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
       center;
   }
-  .section-02 {
-    height: 374px;
-    width: 375px;
-    position: relative;
-    overflow: visible;
-  }
-  .section-02 .background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(./assets/mobile/image-footer.jpg) no-repeat center center;
-    background-size: cover;
-    z-index: 1;
-  }
-  .section-02 .background-overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--purple-300);
-    opacity: 0.4;
+  /* Vertical line & circle */
+  .verticalLine {
+    top: -3rem;
     z-index: 2;
   }
-  .section-02 .content {
-    position: relative;
-    z-index: 3;
-    text-align: center;
-    color: var(--White);
-    padding: 1em;
+  .verticalLine,
+  .verticalLine-2 {
+    border-left: solid 1px var(--slate-300);
+    height: 80px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .verticalLine-2 {
+    top: -7rem;
+  }
+  .verticalLine-2,
+  .circle {
+    z-index: 1;
+  }
+  .circle,
+  .circle-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 56px;
+    height: 56px;
+    border: solid 1px var(--slate-300);
+    border-radius: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    /* margin: 20px auto; */
+    background: var(--White);
+  }
+  .circle {
+    top: 2rem;
+  }
+  .circle-2 {
+    top: -2rem;
+    z-index: 11;
+  }
+  .circle span,
+  .circle-2 span {
+    font-size: 1rem;
+    font-weight: var(--fw-600);
   }
 }
