desktop size progress

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -43,18 +43,12 @@
 
 /* General & Global styling */
 * {
-  /* margin: 0;
-  padding: 0; */
   box-sizing: border-box;
 }
-/* body, html {
-  width: 100%;
-  overflow-x: hidden; 
-} */
+
 body {
   font-family: "Outfit", serif;
   background: var(--white-002);
-  /* color: var(--Very-Dark-Blue);  */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,9 +66,8 @@ main {
 section {
   text-align: center;
 }
-
-section,
-main {
+main,
+section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,7 +78,7 @@ svg {
   margin: 0.5em;
 }
 footer {
-  color: var(--White);
+  color: var(--slate-900);
   position: relative;
   padding-bottom: 5px;
 }
@@ -103,6 +96,46 @@ footer {
 @media only screen and (min-width: 769px) and (max-width: 1440px) {
   section {
     width: 1440px;
+    position: relative;
+    margin: 0 auto;
+  }
+  /* Section h1, h2 & p */
+  h1 {
+    color: var(--slate-900);
+    font-size: var(--txt-size-64px);
+    text-align: center;
+    letter-spacing: -1px;
+    word-spacing: 5px;
+    height: 106px;
+    width: 448.3px;
+    margin-bottom: 5rem;
+  }
+  section.section-00 p {
+    width: 448.3px;
+    height: 54px;
+    /* margin-bottom: 5rem; */
+  }
+  /* Hero */
+  .desktop-hero.left,
+  .desktop-hero.right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 303px;
+    width: 394px;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+  }
+  .desktop-hero.left {
+    left: -5px;
+    background: url(/starter-code/assets/desktop/image-hero-left.png) no-repeat
+      center;
+  }
+  .desktop-hero.right {
+    right: -5px;
+    background: url(/starter-code/assets/desktop/image-hero-right.png) no-repeat
+      center;
   }
 }
 
@@ -198,7 +231,7 @@ footer {
     padding: 1em;
     padding-top: 3rem;
   }
-  .hero {
+  .tablet-hero {
     height: 303px;
     width: 100%;
     margin: 0 auto;
@@ -396,7 +429,7 @@ footer {
     width: 100%;
     height: 100%;
   }
-  .hero {
+  .mobile-hero {
     height: 160px;
     width: 375px;
     margin: 0 auto;
@@ -470,7 +503,7 @@ footer {
     background: url(./assets/desktop/image-man-texting.jpg) no-repeat center
       center;
   }
-  /* Vertical line & circle */
+  /* Line & circle */
   .verticalLine {
     top: -3rem;
     z-index: 2;
