--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -100,6 +100,12 @@ footer {
     margin: 0 auto;
   }
   /* Section h1, h2 & p */
+  h1 {
+    margin-bottom: 2rem;
+  }
+  section.section-01 h2 {
+    margin-bottom: 10rem;
+  }
   h1,
   section.section-01 h2 {
     color: var(--slate-900);
@@ -109,7 +115,6 @@ footer {
     word-spacing: 5px;
     height: 140px;
     width: 448.3px;
-    margin-bottom: 2rem;
   }
   section.section-00 p {
     width: 448.3px;
@@ -117,7 +122,7 @@ footer {
     /* margin-bottom: 5rem; */
   }
   section.section-01 p {
-    height: 54px;
+    /* height: 54px; */
     width: 448.3px;
   }
   section.section-02 div.content p {
@@ -194,11 +199,11 @@ footer {
   /* Image grid */
   .image-grid {
     display: grid;
-    grid-template-columns: repeat(4, 152px);
-    grid-template-rows: 160px;
+    grid-template-columns: repeat(4, 256px);
+    grid-template-rows: 256px;
     grid-gap: 20px;
     justify-content: center;
-    margin-top: 7rem;
+    margin-top: 20rem;
     z-index: 0;
     position: relative;
     margin-bottom: 5rem;
