--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -58,10 +58,11 @@ body {
   padding: 0;
 }
 main {
-  justify-content: center;
+  /* justify-content: center; */
   min-height: 100vh;
   padding: 1em;
   width: 100%;
+  justify-content: flex-end;
 }
 section {
   text-align: center;
@@ -141,6 +142,9 @@ footer {
     color: var(--White);
     margin: 2rem 0rem;
   }
+  section.section-02 div.content h2 {
+    margin-left: 2rem;
+  }
   /* Hero */
   .desktop-hero.left,
   .desktop-hero.right {
@@ -163,7 +167,59 @@ footer {
     background: url(/starter-code/assets/desktop/image-hero-right.png) no-repeat
       center;
   }
-
+  /* Sections*/
+  .section-00,
+  .section-01 {
+    gap: 1rem;
+    margin-bottom: 10rem;
+  }
+  .section-02 {
+    height: 312px;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    overflow: visible;
+    background: url(./assets/desktop/image-footer.jpg) no-repeat center center;
+    margin: 0 auto;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border: solid 2px red;
+    background-size: cover;
+  }
+  .section-02 .background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: 1;
+  }
+  .section-02 .background-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--purple-300);
+    opacity: 0.4;
+    z-index: 2;
+  }
+  .section-02 .content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    justify-content: space-between;
+    z-index: 3;
+    color: var(--White);
+    padding: 1em;
+    padding-top: 5rem;
+    width: 100%;
+  }
   /* Buttons */
   .btn-container {
     display: flex;
@@ -175,6 +231,9 @@ footer {
   .btn-2 {
     background: var(--purple-600);
     width: 161px;
+  }
+  .btn-3 {
+    margin-right: 2rem;
   }
   .btn,
   .btn-2 {
