--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -58,11 +58,10 @@ body {
   padding: 0;
 }
 main {
-  /* justify-content: center; */
   min-height: 100vh;
-  padding: 1em;
   width: 100%;
   justify-content: flex-end;
+  max-width: 1440px;
 }
 section {
   text-align: center;
@@ -175,17 +174,17 @@ footer {
   }
   .section-02 {
     height: 312px;
-    width: 100%;
+    max-width: 1440px;
     align-items: center;
     position: relative;
     overflow: visible;
     background: url(./assets/desktop/image-footer.jpg) no-repeat center center;
+    background-size: 100% auto;
     margin: 0 auto;
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    border: solid 2px red;
-    background-size: cover;
+    left: 0;
+    /* transform: translateX(-50%); */
+    /* border: solid 2px red; */
   }
   .section-02 .background-overlay {
     position: absolute;
@@ -338,7 +337,6 @@ footer {
     font-weight: var(--fw-600);
   }
 }
-
 /* Tablet size */
 @media only screen and (min-width: 391px) and (max-width: 768px) {
   section {
